Fix background layers

--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -27,6 +27,7 @@
         const min_year_filter = '{{ date_filter.min }}';
         const bingMapKey = '{{ bing_map_key }}';
         const mapTilerKey = '{{ map_tiler_key }}';
+        const mapSurferKey = '{{ map_surfer_key }}';
         const geocontextUrl = '{{ geocontext_url }}';
         const geocontextCollectionKey = '{{ geocontext_collection_key }}';
         const listCollectorAPIUrl = '{% url "list-collector" %}';
