--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -56,7 +56,7 @@
                     class="fa fa-angle-down pull-right filter-icon-arrow"></i>
             </div>
         </div>
-        <div class="row" style="display: none">
+        <div class="row validation-filter-row" style="display: none">
             <div class="col-lg-12 filter-content">
                 <div><input id="filter-validation-validated"
                             name="filter-validation" type="checkbox"
@@ -99,7 +99,7 @@
                     class="fa fa-angle-down pull-right filter-icon-arrow"></i>
             </div>
         </div>
-        <div class="row" style="display: none">
+        <div class="row temporal-scale-row" style="display: none">
             <div class="slide-container" style="padding-bottom: 10px">
                 <div>YEAR</div>
                 <div class="year-indicator">
@@ -189,7 +189,7 @@
                         class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
-            <div class="row" style="display: none">
+            <div class="row conservation-status-row" style="display: none">
                 <div class="col-lg-12 filter-content conservation-status-wrapper form-group">
                     <select multiple  data-placeholder="Select Some Conservation Status" id="conservation-status">
                         {% for status_data in conservation_status_data %}
