--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -25,7 +25,7 @@
 
 {% block body_content %}
     <form action="{{ request.path }}" method="post" id="fish-form"
-          class="needs-validation" novalidate>
+          class="needs-validation" novalidate enctype="multipart/form-data">
         {% csrf_token %}
         <input type="hidden" id="site-id" name="site-id" value="{{ site_id }}">
         <div class="body-form container">
@@ -188,6 +188,17 @@
                         {% endfor %}
                     </select>
                 </div>
+            </div>
+            <div class="form-group row">
+                <label for="date"
+                       class="col-sm-2 col-form-label col-form-label">Image</label>
+                <div class="col-sm-10">
+                    <div class="form-group">
+                        <div class="input-group input-file">
+                            <input type="file" class="form-control" accept="image/*" name="site-image"
+                                   placeholder='Choose a file...'/>
+                        </div>
+                    </div>
             </div>
             <div class="add-taxon-container">
                 <button id="add-taxon" type="button" class="btn btn-default">
