--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -138,19 +138,15 @@
                 </div>
                 <div class="row">
                     <div class="col-2 bio-legend-color bio-cluster-low"></div>
-                    <div class="col-8">1 - 10</div>
-                </div>
-                <div class="row">
-                    <div class="col-2 bio-legend-color bio-cluster-normal"></div>
-                    <div class="col-8">10 - 100</div>
+                    <div class="col-8">2 - 100</div>
                 </div>
                 <div class="row">
                     <div class="col-2 bio-legend-color bio-cluster-high"></div>
-                    <div class="col-8">100 - 500</div>
+                    <div class="col-8">101 - 500</div>
                 </div>
                 <div class="row">
                     <div class="col-2 bio-legend-color bio-cluster-max"></div>
-                    <div class="col-8">500 up</div>
+                    <div class="col-8">>500</div>
                 </div>
             </div>
         </div>
