--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -526,6 +526,7 @@
                     </div>
                     <div class="card-body">
                         <div class="col-12 fish-ssdd-origin-bar-chart">
+                            <div class="chart-loading">Fetching...</div>
                             <canvas id="fish-ssdd-origin-bar-chart-canvas"></canvas>
                         </div>
                     </div>
