Add header for ecological category chart

--- a/sass/static/css/sass_dashboard.css
+++ b/sass/static/css/sass_dashboard.css
@@ -174,3 +174,10 @@ body {
 .table {
     background-color: white !important;
 }
+
+.ecological-chart-header {
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    padding: 10px;
+}
