--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -263,6 +263,7 @@
                     <div class="vertical-space"></div>
                     <div class="chart-container">
                         <div class="chart-title">Ecological category</div>
+                        <div class="ecological-chart-header">-</div>
                         <canvas id="ecological-category-chart"></canvas>
                     </div>
                     <div class="vertical-space"></div>
