--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -12,10 +12,9 @@
 }
 
 .detailed-dashboard-title {
-    padding: 15px;
+    padding-left: 15px;
     font-size: 15pt;
     font-weight: bold;
-    text-align: center;
 }
 
 .loading-dashboard {
@@ -303,4 +302,11 @@ table#filter-history-table {
 
 .site-detailed-table tbody {
     font-size: 8pt;
+}
+
+.dashboard-header {
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    border-bottom: 3px solid #1b900d;
 }
