--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -7,6 +7,9 @@
                 Loading...
             </div>
         </div>
+        <h2 class="dashboard-header" style="margin-left: 15px; margin-right: 15px">
+            Taxa Dashboard
+        </h2>
         <div class="detailed-dashboard-title">&nbsp;</div>
         <button class="btn btn-primary btn-dashboard close-dashboard"
                 style="float: right"><i class="fa fa-times pull-right"></i>
@@ -263,6 +266,10 @@
                 style="float: right; z-index: 10;"><i
                 class="fa fa-times pull-right"></i>
         </button>
+
+        <h2 class="dashboard-header">
+            Site Dashboard
+        </h2>
         <div class="container dashboard-wrapper row">
             <div class="col-lg-4">
                 {# Filter History #}
