Update endemism graphs in Detailed Dashboards

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -565,15 +565,15 @@
                         <div class="card-header-title pull-left d-inbar">
                             Endemism
                         </div>
-                        <button class="download-chart-image btn btn-default pull-right"
-                                data-datac="fish-ssdd-endemism-bar-chart"
-                                data-title="endemism-chart-per-year">
+                        <button class="ssdd-export btn btn-default pull-right"
+                                data-datac="fish-ssdd-endemism-bar-chart">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
                     <div class="card-body">
                         <div class="col-12 fish-ssdd-endemism-bar-chart">
                             <div class="chart-loading">Fetching...</div>
+                            <canvas id="fish-ssdd-endemism-bar-chart-canvas"></canvas>
                         </div>
                     </div>
                 </div>
