--- a/sass/templates/form_only_read_page.html
+++ b/sass/templates/form_only_read_page.html
@@ -21,6 +21,7 @@
 
     <div class="body-form container">
         <h2>View SASS record</h2>
+        <a class="btn btn-primary btn-normal" style="margin-bottom: 10px;" href="/sass/update/{{ site_visit_id }}/">Edit</a>
         <div class="site-code pull-right">
             Site code/name : {{ site_code }}
             <br/>
