Rename ecological condition to ecological category in dashboard

--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -147,8 +147,8 @@
                 <div class="vertical-space"></div>
                 <div class="chart-container ajax-container">
                     <div class="table-title">
-                        Ecological Condition
-                        <i data-download-title="Ecological Condition"
+                        Ecological Category
+                        <i data-download-title="Ecological Category"
                            data-toggle="tooltip" data-placement="left"
                            title="Download charts"
                            class="fa fa-download pull-right download-icon download-chart"></i>
