Update Proportion of sensitive to tolerant

--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -237,9 +237,9 @@
                                Tolerant (4 to 7),
                                Sensitive (8 to 11),
                                Highly sensitive (12 to 15)">
-                                Proportion of sensitive to tolerant
+                                Proportion of sensitive to tolerant taxa
                             </span>
-                            <i data-download-title="Proportion of sensitive to tolerant"
+                            <i data-download-title="Proportion of sensitive to tolerant taxa"
                                data-toggle="tooltip" data-placement="left"
                                title="Download chart"
                                class="fa fa-download pull-right download-icon download-chart"></i>
