--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -68,13 +68,13 @@
                 {% if is_sass_enabled %}
                     <div>
                         <input id="filter-validation-sass-acredited" name="filter-validation" type="checkbox"
-                            value="sass acredited">
-                        <label class="checkbox-label" for="filter-validation-sass-acredited">SASS Acredited</label>
+                            value="sass accredited">
+                        <label class="checkbox-label" for="filter-validation-sass-acredited">SASS Accredited</label>
                     </div>
                     <div>
                         <input id="filter-validation-non-sass-acredited" name="filter-validation" type="checkbox"
-                            value="non sass acredited">
-                        <label class="checkbox-label" for="filter-validation-non-sass-acredited">Non SASS Acredited</label>
+                            value="non sass accredited">
+                        <label class="checkbox-label" for="filter-validation-non-sass-acredited">Non SASS Accredited</label>
                     </div>
                 {% endif %}
                 <div id="filter-validation-error">Please tick at least one
