Update geomorphological zones

--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -42,6 +42,7 @@
             const riverCatchments = {% if river_catchments %}{{ river_catchments | safe }}{% else %}[]{% endif %};
             const ecoGeoGroup = {% if eco_geo %}{{ eco_geo | safe }}{% else %}[]{% endif %};
             const riverEcoregionGroup = {% if eco_geo %}{{ river_ecoregion_group | safe }}{% else %}[]{% endif %};
+            const geomorphologicalGroup = {% if eco_geo %}{{ geomorphological_group | safe }}{% else %}[]{% endif %};
             const politicalBoundary = {% if political_boundary %}{{ political_boundary | safe }}{% else %}[]{% endif %};
         </script>
         <div class="body-form container">
