--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -41,6 +41,8 @@
             const biotopeRatingLabels = {{ biotope_ratings_chart_data.biotope_labels | safe }};
             const riverCatchments = {% if river_catchments %}{{ river_catchments | safe }}{% else %}[]{% endif %};
             const ecoGeoGroup = {% if eco_geo %}{{ eco_geo | safe }}{% else %}[]{% endif %};
+            const riverEcoregionGroup = {% if eco_geo %}{{ river_ecoregion_group | safe }}{% else %}[]{% endif %};
+            const geomorphologicalGroup = {% if eco_geo %}{{ geomorphological_group | safe }}{% else %}[]{% endif %};
             const politicalBoundary = {% if political_boundary %}{{ political_boundary | safe }}{% else %}[]{% endif %};
         </script>
         <div class="body-form container">
