--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -250,7 +250,7 @@
                         Are you sure you want to submit the SASS form?
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default"
+                        <button type="button" id="cancel-submit" class="btn btn-default"
                                 data-dismiss="modal">Cancel
                         </button>
                         <a href="#" id="submit"
