--- a/sass/templates/form_only_read_page.html
+++ b/sass/templates/form_only_read_page.html
@@ -21,8 +21,9 @@
 
     <div class="body-form container">
         <h2>View SASS record</h2>
-        {% if user.is_superuser or user.is_staff %}
+        {% if user.is_superuser or owner == user or assessor == user %}
             <a class="btn btn-primary btn-normal" style="margin-bottom: 10px;" href="/sass/update/{{ site_visit_id }}/">Edit</a>
+            <a class="btn btn-danger btn-normal" style="margin-bottom: 10px;" href="/sass/delete/{{ site_visit_id }}/">Delete</a>
         {% endif %}
         <div class="site-code pull-right">
             Site code/name : {{ site_code }}
