--- a/sass/templates/form_only_read_page.html
+++ b/sass/templates/form_only_read_page.html
@@ -21,8 +21,34 @@
 
     <div class="body-form container">
         <h2>View SASS record</h2>
-        {% if user.is_superuser or user.is_staff %}
+        {% if user.is_superuser or owner == user or assessor == user %}
             <a class="btn btn-primary btn-normal" style="margin-bottom: 10px;" href="/sass/update/{{ site_visit_id }}/">Edit</a>
+            <div class="btn btn-danger btn-normal" style="margin-bottom: 10px;" data-toggle="modal" data-target="#confirm-submit">Delete</div>
+            <div class="modal fade" id="confirm-submit" tabindex="-1"
+                 role="dialog"
+                 aria-labelledby="myModalLabel" aria-hidden="true">
+                <form method="POST" action="/sass/delete/{{ site_visit_id }}/">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                Confirm Delete
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to delete this SASS
+                                record?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" id="cancel-submit"
+                                        class="btn btn-default"
+                                        data-dismiss="modal">Cancel
+                                </button>
+                                <button type="submit" value="Yes" id="submit"
+                                        class="btn btn-success success" data-message="Deleting...">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
         {% endif %}
         <div class="site-code pull-right">
             Site code/name : {{ site_code }}
