--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -61,7 +61,7 @@
                        class="col-sm-2 col-form-label col-form-label">Site
                     Code</label>
                 <div class="col-sm-8">
-                    <input type="text" name="site_description"
+                    <input type="text" name="site_code" id="site_code"
                            class="form-control form-control-sm"
                            placeholder="">
                 </div>
