--- a/bims/static/css/site_form.css
+++ b/bims/static/css/site_form.css
@@ -34,6 +34,6 @@ body {
     margin-top: 2px;
 }
 
-#update-site-code {
+#update-site-code, #fetch-geomorphological-zone {
     margin-left: -10px;
 }
