--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -40,12 +40,12 @@
             <div id="site-map"></div>
             <div class="form-group row">
                 <label for="date"
-                       class="col-sm-1 col-form-label col-form-label">Latitude</label>
+                       class="col-sm-1 col-form-label col-form-label">Latitude*</label>
                 <input type="text" id="latitude" name="latitude"
                        class="col-sm-2 form-control form-control-sm"
                        value="{{ location_site_lat }}">
                 <label for="date"
-                       class="col-sm-1 col-form-label col-form-label">Longitude</label>
+                       class="col-sm-1 col-form-label col-form-label">Longitude*</label>
                 <input type="text" id="longitude" name="longitude"
                        class="col-sm-2 form-control form-control-sm"
                        value="{{ location_site_long }}">
@@ -59,17 +59,41 @@
             <div class="form-group row">
                 <label for="site_name"
                        class="col-sm-2 col-form-label col-form-label">Site
-                    Code</label>
-                <div class="col-sm-8">
+                    Code*</label>
+                <div class="col-sm-4">
                     <input type="text" name="site_code" id="site_code"
                            class="form-control form-control-sm"
-                           placeholder="">
+                           placeholder="" required>
                 </div>
                 <div class="update-taxon-container col-sm-2">
                     <button id="update-site-code" type="button"
                             class="btn btn-default" disabled>
                         Generate site code
                     </button>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="site_name"
+                       class="col-sm-2 col-form-label col-form-label">Geomorphological Zone*</label>
+                <div class="col-sm-4">
+                    <input type="text" name="geomorphological_zone" id="geomorphological_zone"
+                           class="form-control form-control-sm"
+                           placeholder="" disabled>
+                </div>
+                <div class="update-taxon-container col-sm-2">
+                    <button id="fetch-geomorphological-zone" type="button"
+                            class="btn btn-default" disabled>
+                        Fetch data
+                    </button>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="site_name"
+                       class="col-sm-2 col-form-label col-form-label">Refined Geomorphological Zone</label>
+                <div class="col-sm-10">
+                    <input type="text" name="refined_geomorphological_zone" id="refined_geomorphological_zone"
+                           class="form-control form-control-sm"
+                           placeholder="">
                 </div>
             </div>
             <div class="form-group row">
@@ -89,7 +113,7 @@
                 <div class="col-sm-10">
                     <input type="text" name="collector"
                            class="form-control form-control-sm"
-                           placeholder="">
+                           placeholder="" value="{{ request.user.username }}" disabled>
                 </div>
             </div>
         </div>
