--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -17,6 +17,8 @@
         const geoserverPublicUrl = '{{ geoserver_public_location }}';
         const locationSiteGeoserverLayer = '{{ bims_preferences.geoserver_location_site_layer }}';
         const defaultWMSSiteParameters = '{{ bims_preferences.default_location_site_cluster }}';
+        const locationSiteLat = '{{ location_site_lat }}';
+        const locationSiteLong = '{{ location_site_long }}';
     </script>
 
 {% endblock %}
@@ -63,7 +65,7 @@
                 <div class="col-sm-4">
                     <input type="text" name="site_code" id="site_code"
                            class="form-control form-control-sm"
-                           placeholder="" required>
+                           placeholder="" value="{{ site_code }}" required>
                     <input type="hidden" name="river" id="river">
                     <input type="hidden" name="catchment_geocontext" id="catchment_geocontext">
                 </div>
@@ -80,7 +82,7 @@
                 <div class="col-sm-4">
                     <input type="text" name="geomorphological_zone" id="geomorphological_zone"
                            class="form-control form-control-sm"
-                           placeholder="" readonly>
+                           placeholder="" value="{{ original_geo_zone }}" readonly>
                     <input type="hidden" name="geomorphological_group_geocontext" id="geomorphological_group_geocontext">
                 </div>
                 <div class="update-taxon-container col-sm-2">
@@ -97,7 +99,7 @@
                     <select name="refined_geomorphological_zone" class="form-control form-control-sm">
                         <option value="">-</option>
                         {% for geo in geomorphological_zone_category %}
-                            <option value="{{ geo.0 }}">{{ geo.1 }}</option>
+                            <option value="{{ geo.0 }}" {% if geo.0 == refined_geo_zone %}selected{% endif %}>{{ geo.1 }}</option>
                         {% endfor %}
                     </select>
                 </div>
@@ -109,7 +111,7 @@
                 <div class="col-sm-10">
                     <input type="text" name="site_description"
                            class="form-control form-control-sm"
-                           placeholder="">
+                           placeholder="" value="{{ site_description }}">
                 </div>
             </div>
             <div class="form-group row">
@@ -124,7 +126,7 @@
                 </div>
             </div>
             <div class="form-group submit-holder">
-                <input class="btn btn-success submit-button" type="submit" value="ADD">
+                <input class="btn btn-success submit-button" type="submit" value="{% if update %}SAVE{% else %}ADD{% endif %}">
             </div>
         </div>
     </form>
