--- a/bims/static/css/site_form.css
+++ b/bims/static/css/site_form.css
@@ -43,7 +43,10 @@ body {
 }
 
 .submit-button {
+    text-align: center;
+}
+
+.btn {
     padding-left: 50px;
     padding-right: 50px;
-    text-align: center;
 }
