--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -19,6 +19,7 @@
         const defaultWMSSiteParameters = '{{ bims_preferences.default_location_site_cluster }}';
         const locationSiteLat = '{{ location_site_lat }}';
         const locationSiteLong = '{{ location_site_long }}';
+        const allowToEdit = {% if update %}{% if allow_to_edit %}true{% else %}false{% endif %}{% else %}true{% endif %};
     </script>
 
 {% endblock %}
@@ -56,17 +57,25 @@
                  style="display: none;">
             </div>
             <div id="site-map"></div>
+            {% if update %}
+                <div class="form-group row">
+                    <div class="col-lg-12">
+                        <a href="/fish-form/?siteId={{ site_id }}" class="btn btn-info">Add Fish</a>
+                        <a href="/sass/{{ site_id }}/" class="btn btn-info">Add SASS</a>
+                    </div>
+                </div>
+            {% endif %}
             <div class="form-group row">
                 <label for="date"
                        class="col-sm-1 col-form-label col-form-label">Latitude*</label>
                 <input type="text" id="latitude" name="latitude"
                        class="col-sm-2 form-control form-control-sm"
-                       value="{{ location_site_lat }}">
+                       value="{{ location_site_lat }}" {% if update %}{% if not allow_to_edit %}disabled{% endif %}{% endif %}>
                 <label for="date"
                        class="col-sm-1 col-form-label col-form-label">Longitude*</label>
                 <input type="text" id="longitude" name="longitude"
                        class="col-sm-2 form-control form-control-sm"
-                       value="{{ location_site_long }}">
+                       value="{{ location_site_long }}" {% if update %}{% if not allow_to_edit %}disabled{% endif %}{% endif %}>
                 <div class="update-taxon-container col-sm-2">
                     <button id="update-coordinate" type="button"
                             class="btn btn-default" disabled>
@@ -81,7 +90,7 @@
                 <div class="col-sm-4">
                     <input type="text" name="site_code" id="site_code"
                            class="form-control form-control-sm"
-                           placeholder="" value="{{ site_code }}" required>
+                           placeholder="" value="{{ site_code }}" required {% if update %}{% if not allow_to_edit %}disabled{% endif %}{% endif %}>
                     <input type="hidden" name="river" id="river">
                     <input type="hidden" name="catchment_geocontext" id="catchment_geocontext">
                 </div>
@@ -112,7 +121,7 @@
                 <label for="site_name"
                        class="col-sm-2 col-form-label col-form-label">Refined Geomorphological Zone</label>
                 <div class="col-sm-10">
-                    <select name="refined_geomorphological_zone" class="form-control form-control-sm">
+                    <select name="refined_geomorphological_zone" class="form-control form-control-sm" {% if update %}{% if not allow_to_edit %}disabled{% endif %}{% endif %}>
                         <option value="">-</option>
                         {% for geo in geomorphological_zone_category %}
                             <option value="{{ geo.0 }}" {% if geo.0 == refined_geo_zone %}selected{% endif %}>{{ geo.1 }}</option>
@@ -127,7 +136,7 @@
                 <div class="col-sm-10">
                     <input type="text" name="site_description"
                            class="form-control form-control-sm"
-                           placeholder="" value="{{ site_description }}">
+                           placeholder="" value="{{ site_description }}" {% if update %}{% if not allow_to_edit %}disabled{% endif %}{% endif %}>
                 </div>
             </div>
             <div class="form-group row">
@@ -137,12 +146,12 @@
                 <div class="col-sm-10">
                     <input type="text"
                            class="form-control form-control-sm"
-                           placeholder="" value="{{ request.user.username }}" disabled>
-                    <input type="hidden" name="collector" value="{{ request.user.id }}">
+                           placeholder="" value="{{ username }}" disabled>
+                    <input type="hidden" name="collector" value="{{ user_id }}">
                 </div>
             </div>
             <div class="form-group submit-holder">
-                <input class="btn btn-success submit-button" type="submit" value="{% if update %}SAVE{% else %}ADD{% endif %}">
+                <input class="btn btn-success submit-button" type="submit" value="{% if update %}SAVE{% else %}ADD{% endif %}" {% if update %}{% if not allow_to_edit %}disabled{% endif %}{% endif %}>
             </div>
         </div>
     </form>
