--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -144,12 +144,12 @@
                        class="col-sm-2 col-form-label col-form-label required-text">Collector</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control form-control-sm"
-                           id="collector" placeholder="" name="collector"
+                           id="collector" placeholder="" name="collector" value="{% if user.first_name %} {{ user.first_name }} {% else %} {{ user.username }} {%  endif%}"
                            required>
                     <div class="invalid-feedback">
                         Please provide a collector
                     </div>
-                    <input type="hidden" name="collector_id" id="collector_id">
+                    <input type="hidden" name="collector_id" id="collector_id" value="{{ user.id }}">
                 </div>
             </div>
             <div class="form-group row">
