--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -49,6 +49,7 @@
                                 <a class="dropdown-item" href="/admin/">ADMINISTRATION</a>
                             {% endif %}
                             <a class="dropdown-item" href="/nonvalidated-user-list/">UPDATE RECORDS</a>
+                            <a class="dropdown-item" href="/location-site-form/add/">ADD SITE</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/accounts/logout/"><i class="fa fa-sign-out"></i> LOGOUT</a>
                         {% else %}
