--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -120,7 +120,7 @@
         {% if use_ecological_condition %}
             <div class="row sub-filter">
                 <div class="col-lg-12 subtitle">
-                    ECOLOGICAL CONDITION <i
+                    ECOLOGICAL CATEGORY <i
                         class="fa fa-angle-up pull-right filter-icon-arrow"></i><i
                         class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
