Fix sass form view

--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -103,7 +103,7 @@
                 <th scope="col">Stones</th>
                 <th scope="col">Vegetation</th>
                 <th scope="col">Gravel, sand, mud</th>
-                <th scope="col">Total</th>
+                <th scope="col">Site</th>
             </tr>
             </thead>
             <tbody id="taxon-list">
