Allow empty geomorphological zone in location site form

--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -108,7 +108,7 @@
                 <div class="col-sm-4">
                     <input type="text" name="geomorphological_zone" id="geomorphological_zone"
                            class="form-control form-control-sm"
-                           placeholder="" value="{{ original_geo_zone }}" required readonly>
+                           placeholder="" value="{{ original_geo_zone }}" readonly>
                     <input type="hidden" name="geomorphological_group_geocontext" id="geomorphological_group_geocontext">
                 </div>
                 <div class="update-taxon-container col-sm-2">
