--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -152,7 +152,12 @@
                 </div>
             </div>
             <div class="form-group submit-holder">
-                <input class="btn btn-success submit-button" type="submit" value="{% if update %}SAVE{% else %}ADD{% endif %}" {% if update %}{% if not allow_to_edit %}disabled{% endif %}{% endif %}>
+                {% if update %}
+                    <input class="btn btn-success submit-button" type="submit" value="SAVE" {% if not allow_to_edit %}disabled{% endif %}>
+                    <input type="button" data-toggle="modal" data-target="#confirm-delete" class="btn btn-danger" value="DELETE">
+                {% else %}
+                    <input class="btn btn-success submit-button" type="submit" value="ADD">
+                {% endif %}
             </div>
         </div>
     </form>
@@ -176,6 +181,29 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog"
+         aria-labelledby="myModalLabel" aria-hidden="true">
+        <form method="POST" action="/location-site-form/delete/{{ site_id }}/">
+            {% csrf_token %}
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        Confirm Delete
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete the site?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" id="cancel-submit" class="btn btn-default"
+                                data-dismiss="modal">Cancel
+                        </button>
+                        <button type="submit" href="#" id="submit"
+                           class="btn btn-danger success">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
 
 {% endblock %}
