--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -172,11 +172,20 @@
                 <input class="origin-checkbox" type="checkbox" value="alien" name="category-value" style="display: none" id="alien"/>
                 <input class="origin-checkbox" type="checkbox" value="indigenous" name="category-value" style="display: none" id="indigenous"/>
                 <input class="origin-checkbox" type="checkbox" value="translocated" name="category-value" style="display: none" id="translocated"/>
+                <div class="smaller-font btn-group btn-group-sm">
+                    <button id="non-native-origin-btn" type="button" class="btn origin-btn btn-secondary dropdown-toggle" data-origin="non-native" data-toggle="dropdown">Non-Native</button>
+                    <div class="non-native-origin-dropdown dropdown-menu origin-menu">
+                        <li class="dropdown-item non-native-dropdown-item" data-non-native-value="alien">
+                            <input class="non-native-checkbox" name="non-native-value" type="checkbox" value="alien"> Alien
+                        </li>
+                        <li class="dropdown-item non-native-dropdown-item" data-non-native-value="translocated">
+                            <input class="non-native-checkbox" name="non-native-value" type="checkbox" value="translocated"> Extralimital
+                        </li>
+                    </div>
+                </div>
                 <div class="smaller-font btn-group btn-group-sm" role="group" aria-label="First group">
-                    <button type="button" class="btn origin-btn btn-secondary" data-origin="alien">Non-native</button>
-                    <button type="button" class="btn origin-btn btn-secondary" data-origin="translocated">Translocated</button>
                     <button id="native-origin-btn" type="button" class="btn origin-btn btn-secondary dropdown-toggle" data-origin="indigenous" data-toggle="dropdown">Native</button>
-                    <div class="native-origin-dropdown dropdown-menu" aria-labelledby="native-origin-btn">
+                    <div class="native-origin-dropdown dropdown-menu origin-menu" aria-labelledby="native-origin-btn">
                         <div class="dropdown-item endemic-dropdown-item" data-endemic-value="all-endemic"><input id="all-endemic-checkbox" class="endemic-checkbox" type="checkbox"> All endemic </div>
                     </div>
                 </div>
